Fixed hover highlight for the tab close button

Bug: 839000
Change-Id: I000a3aae3e5c9373baadc9f3c4d693e91ae07725
Reviewed-on: https://chromium-review.googlesource.com/1040671
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555545}