chrome/browser/ui/views/tabs/tab_close_button.cc
@@ -156,7 +156,7 @@ void TabCloseButton::GenerateImages(bool is_touch,
           : normal;
 
   const gfx::ImageSkia& hover_highlight =
-      gfx::CreateVectorIcon(highlight, hover_pressed_icon_color);
+      gfx::CreateVectorIcon(highlight, hover_highlight_color);
   const gfx::ImageSkia& pressed_highlight =
       gfx::CreateVectorIcon(highlight, pressed_highlight_color);
   const gfx::ImageSkia& hover =
